# Gd-Hu-C-Cong

./: README.md  j.sh  稳定性.tex
cpp仿真程序/opti=2/: README.MD  USE_FFT.c  USE_FFT.h  kongzhi.c  myfun.c  myfun.h  ofun.c  qxtdemo.c
cpp仿真程序/opti==c++/: CMakeLists.txt  README.md  ex1.cpp  ex1.h  main.cpp  pro.cpp  pro.h  use_openblas.h  use_opencv.cpp  use_opencv.hpp
cpp仿真程序/opti==c++/doc/: 说明.aux  说明.tex
cpp仿真程序/test/: CMakeLists.txt  USE_FFT.c  USE_FFT.h  ok.c  qxt.sh
cpp仿真程序/test2/: CMakeLists.txt  README.MD  kongzhi.c  myfun.c  myfun.h  opti_utils.c  qxt.sh  qxtdemo.c
python程序/: README.MD
python程序/优化/: quad.py
python程序/数值/: changwei.py  matrixcom.py  svd.py
python程序/金融/: touzizuhe.py
py优化/: README.MD  quad.py  quad1.py
延时相关代码/稳定性判别代码/: panding.m
延时相关代码/稳定性判别代码=v2/: Pzf.m  ceshi2.m  gammat.m  jiaodian.m  juanraoshu.m  numWv2.m  readme.md  zhongdian.m
延时相关代码/系统仿真多延时/: comdata.m  ddedata.mat  demo.m  mphi.m  myut.m  rea.m  reahis.m
文档/: 多延时仿真.aux  多延时仿真.tex  稳定性.aux  稳定性.tex
